# mcp-utc-time-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.hardware  Dockerfile.local  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README.md.bak  RESOLUTION_SUMMARY.md  docker-compose.rpi.yml  docker-compose.yml  openapi.yaml  test_timezone.sh
.github/: README.md  setup-azure-deploy.sh
.github/chatmodes/: timestamp-agent.chatmode.md
.github/workflows/: build-edge.yml  cd-production.yml  ci.yml  ghcr-publish.yml
benches/: time_benchmarks.rs
config/: ntp.conf.template  supervisor.conf
docs/: AZURE_DEPLOYMENT.md  FLEET_MANAGEMENT.md  HTTP_API.md  HTTP_API_TESTING.md  INTEGRATION.md  MCP_COMPLIANCE.md  NTP_SHM_SETUP.md  PERFORMANCE.md  RASPBERRY_PI.md  SECRETS.md  TEST_REPORT.md  TUNNEL_SETUP.md
examples/: demo.sh
infra/: README.md  create_secrets.sh  deploy.sh  main.bicep  main.parameters.json
k8s/: deployment.yaml
scripts/: README.md  configure-ntp.sh  detect-hardware.sh  entrypoint.sh  health-check.sh  start_mcpo.sh  start_tunnel.sh  stop_tunnel.sh  test_http_api.sh  test_mcp_protocol.sh  test_mcp_simple.sh  test_mcpo.sh  test_ntp_integration.sh  test_tunnel.sh  test_vscode.sh  verify.sh
src/: error.rs  lib.rs  main.rs  server_sdk.rs
src/auth/: api_key.rs  mod.rs
src/mcp/: transport.rs  types.rs
src/ntp/: config.rs  mod.rs  sync.rs
src/server/: handlers.rs  mod.rs  protocol.rs
src/time/: formats.rs  mod.rs  timezone.rs  unix.rs  utc.rs
tests/: http_api_test.rs  integration_test.rs
