[package]
name = "mcp-utc-time-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Official MCP Rust SDK with OAuth support
rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "transport-sse-server", "auth"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.9"

# Unix/POSIX compatibility
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# OAuth/SSE server support
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
askama = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
rstest = "0.18"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "time_benchmarks"
harness = false

[features]
default = []
sse-auth = ["axum", "tower-http", "rand", "uuid", "askama"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true